--- a/myblogsite/blog/templates/post_list.html
+++ b/myblogsite/blog/templates/post_list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Blog Posts</h1>
-    <button type="reset"></button>
+    <button ></button>
     <ul>
         {% for post in posts %}
             <li><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></li>
