Bug fix -user name not shown

--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -19,7 +19,7 @@
     <h2>Comments: </h2>
     {% for comment in comments %}
         <div class="comments">
-            <div>{{ comment.user_ref.username }}</div>
+            <div>{{ comment.user_ref__username }}</div>
             <div>{{ comment.created_at }}</div>
             <p>{{ comment.content }}</p>
             <img src="/media/{{ comment.image }}" style="max-width: 700px; max-height: 700px;" alt="{{ comment.title }}">
