--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -6,6 +6,18 @@
 </head>
 <body>
     <h1>Blog Posts</h1>
+    <span>
+        <form action="" method="post">
+            {% csrf_token %}
+            
+            {{ form.non_field_errors }}
+            
+            {{ form.as_p }}
+            
+            <button type="submit">Submit</button>
+        </form>
+        
+    </span>
     <button onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>
     {% for post in posts %}
         <h3 onclick="location.href = '{% url 'post_detail' pk=post.id page_number=1 %}'">{{ post.post_ref__title }}</h3>
