--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -14,15 +14,18 @@
         {{ post.created_at }}</p></span>
     <p>{{ post.content }}</p>
     <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 700px; max-height: 700px;">
-    <h5>Upvote: {{ upvotes }}</h5>
-    <h5>Downvote: {{ downvotes }}</h5>
+    <h5>Upvote: {{ post_upvotes }}</h5>
+    <h5>Downvote: {{ post_downvotes }}</h5>
     <h2>Comments: </h2>
+  {% comment %}TODO Add vote counters in comments and their interactivity 
+    Current plan, use javascript and jqeury{% endcomment %}
     {% for comment in comments %}
         <div class="comments">
             <div>{{ comment.user_ref__username }}</div>
             <div>{{ comment.created_at }}</div>
             <p>{{ comment.content }}</p>
             <img src="/media/{{ comment.image }}" style="max-width: 700px; max-height: 700px;" alt="{{ comment.title }}">
+            <h5>Upvote:</h5>
         </div>
     {% endfor %}
     <form action="" method="post" enctype="multipart/form-data">
@@ -33,4 +36,7 @@
     </form>
     
 </body>
+<script>
+    
+</script>
 </html>
