--- a/myblogsite/blog/templates/register_form.html
+++ b/myblogsite/blog/templates/register_form.html
@@ -7,7 +7,7 @@
 <body>
     <h2>Register</h2>
 
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ form.non_field_errors }}
