Taking advantage of pre-built login and logout

--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Blog Posts</h1>
     <button onclick="location.href = '{% url 'profile' %}'">Profile</button>
+    <button onclick="location.href = '{% url 'logout' %}'">Log Out</button>
     <span>
         <div> 
         <form action="" method="post">
