--- a/myblogsite/blog/templates/login_form.html
+++ b/myblogsite/blog/templates/login_form.html
@@ -14,6 +14,8 @@
 
         {{ form.as_p }}
 
+        <input type="hidden" name="next" value="{% url 'home' pk=0 page_number=1 %}" />
+
         <button type="submit">Submit</button>
     </form>
     <p>Don't have an account? Register <a href="{% url 'register' %}">here</a>.</p>
