Modification of User Model Deleted: birth_date, email, last_name, first_name attribute in user model

--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -9,10 +9,7 @@
 <h2>Profile</h2>
 <img src="{{ picture }}" style="max-width: 700px; max-height: 700px;">
 <h5>Username: <i>{{ username }}</i></h5>
-<h5>First name: <i>{{ first_name }}</i></h5>
-<h5>Last name: <i>{{ last_name }}</i></h5>
-<h5>Email: <i>{{ email }}</i></h5>
-<h5>Birth Data: <i>{{ birth_date }}</i></h5>
+{#TODO Include password and editable profile#}
 <h5>Is Staff: <i>{{ is_staff }}</i></h5>
 </body>
 </html>
