--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -53,6 +53,7 @@
     var user_post_pk = {{ user_post_pk }}
     var csrf_token = '{{ csrf_token }}'
     var post_vote_url = '{% url 'post_vote' %}'
+    var comment_vote_url = '{% url 'comment_vote' %}'
 </script>
 <script src="{% static 'blog/js/post_detail.js' %}"></script>
 </html>
