--- a/myblogsite/blog/templates/register_form.html
+++ b/myblogsite/blog/templates/register_form.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Register Form</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/css/login_form.css' %}">
 </head>
 <body>
     <h2>Register</h2>
-
+    <div class = "main_form">
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
@@ -16,6 +18,7 @@
 
     </form>
 
-    <p>Already have an account? Login <a href="{% url 'login' %}">here</a>.</p>
+    <p class = "already">Already have an account? Login <a href="{% url 'login' %}">here</a>.</p>
+    </div>
 </body>
 </html>
