--- a/myblogsite/blog/templates/login_form.html
+++ b/myblogsite/blog/templates/login_form.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <title>Login Form</title>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/login_form.css' %}">
 </head>
 <body>
-    <h2>Login Form</h2>
-    
+
     <div class = "main_form">
+        <h2>Login Form</h2>
+        <form method="post">
+            {% csrf_token %}
 
-    <form method="post">
-        {% csrf_token %}
+            {{ form.as_custom|safe }}
 
-        {{ form.non_field_errors }}
+            <input class = "fields" type="hidden" name="next" value="{% url 'home' pk=0 page_number=1 %}" />
 
-        {{ form.as_p }}
-
-        <input class = "fields" type="hidden" name="next" value="{% url 'home' pk=0 page_number=1 %}" />
-
-        <button type="submit">Submit</button>
-    </form>
-    <p class = "already">Don't have an account? Register <a href="{% url 'register' %}">here</a>.</p>
+            <button type="submit">Submit</button>
+        </form>
+        <p class = "already">Don't have an account? Register <a href="{% url 'register' %}">here</a>.</p>
     </div>
 </body>
 </html>
