--- a/myblogsite/blog/templates/login_form.html
+++ b/myblogsite/blog/templates/login_form.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <title>Login Form</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/css/login_form.css' %}">
+    
 </head>
 <body>
 
-    <div class = "main_form">
-        <h2>Login Form</h2>
-        <form method="post">
-            {% csrf_token %}
+<div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
+</div>
+<form method="post">
+    <h3>Login Form</h3>
+    {% csrf_token %}
 
-            {{ form.as_custom|safe }}
+    {{ form.as_custom|safe }}
 
-            <input class = "fields" type="hidden" name="next" value="{% url 'home' pk=0 page_number=1 %}" />
+    <input class = "fields" type="hidden" name="next" value="{% url 'home' pk=0 page_number=1 %}" />
 
-            <button type="submit">Submit</button>
-        </form>
-        <p class = "already">Don't have an account? Register <a href="{% url 'register' %}">here</a>.</p>
-    </div>
+    <button type="submit">Submit</button>
+    <p class = "already">Don't have an account? Register <a href="{% url 'register' %}">here</a>.</p>
+</form>
 </body>
 </html>
