UI Register Form

--- a/myblogsite/blog/templates/register_form.html
+++ b/myblogsite/blog/templates/register_form.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <title>Register Form</title>
     {% load static %}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/css/login_form.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/css/register_form.css' %}">
 </head>
 <body>
-    <h2>Register</h2>
-    <div class = "main_form">
+<div class="background">
+    <div class="shape"></div>
+    <div class="shape"></div>
+</div>
     <form action="" method="post" enctype="multipart/form-data">
+        <h3>Register</h3>
         {% csrf_token %}
 
         {{ form.non_field_errors }}
         {{ form.as_p }}
         <button type="submit">Register</button>
 
+        <p class = "already">Already have an account? Login <a href="{% url 'login' %}">here</a>.</p>
     </form>
 
-    <p class = "already">Already have an account? Login <a href="{% url 'login' %}">here</a>.</p>
-    </div>
 </body>
 </html>
