--- a/myblogsite/blog/static/blog/css/login_form.css
+++ b/myblogsite/blog/static/blog/css/login_form.css
@@ -94,7 +94,7 @@ input{
 ::placeholder{
     color: #e5e5e5;
 }
-button{
+button , .button{
     margin-top: 50px;
     width: 100%;
     background-color: #ffffff;
