--- a/myblogsite/blog/templates/bs4_forum.html
+++ b/myblogsite/blog/templates/bs4_forum.html
@@ -1,58 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/home.css' %}">
+    <meta charset="utf-8">
+
+
+    <title>bs4 forum - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+    <style type="text/css">
+        body{
+            margin-top:20px;
+            color: #1a202c;
+            text-align: left;
+            background-color: #e2e8f0;
+        }
+        .inner-wrapper {
+            position: relative;
+            height: calc(100vh - 3.5rem);
+            transition: transform 0.3s;
+        }
+        @media (min-width: 992px) {
+            .sticky-navbar .inner-wrapper {
+                height: calc(100vh - 3.5rem - 48px);
+            }
+        }
+
+        .inner-main,
+        .inner-sidebar {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .inner-sidebar {
+            left: 0;
+            width: 235px;
+            border-right: 1px solid #cbd5e0;
+            background-color: #fff;
+            z-index: 1;
+        }
+        .inner-main {
+            right: 0;
+            left: 235px;
+        }
+        .inner-main-footer,
+        .inner-main-header,
+        .inner-sidebar-footer,
+        .inner-sidebar-header {
+            height: 3.5rem;
+            border-bottom: 1px solid #cbd5e0;
+            display: flex;
+            align-items: center;
+            padding: 0 1rem;
+            flex-shrink: 0;
+        }
+        .inner-main-body,
+        .inner-sidebar-body {
+            padding: 1rem;
+            overflow-y: auto;
+            position: relative;
+            flex: 1 1 auto;
+        }
+        .inner-main-body .sticky-top,
+        .inner-sidebar-body .sticky-top {
+            z-index: 999;
+        }
+        .inner-main-footer,
+        .inner-main-header {
+            background-color: #fff;
+        }
+        .inner-main-footer,
+        .inner-sidebar-footer {
+            border-top: 1px solid #cbd5e0;
+            border-bottom: 0;
+            height: auto;
+            min-height: 3.5rem;
+        }
+        @media (max-width: 767.98px) {
+            .inner-sidebar {
+                left: -235px;
+            }
+            .inner-main {
+                left: 0;
+            }
+            .inner-expand .main-body {
+                overflow: hidden;
+            }
+            .inner-expand .inner-wrapper {
+                transform: translate3d(235px, 0, 0);
+            }
+        }
+
+        .nav .show>.nav-link.nav-link-faded, .nav-link.nav-link-faded.active, .nav-link.nav-link-faded:active, .nav-pills .nav-link.nav-link-faded.active, .navbar-nav .show>.nav-link.nav-link-faded {
+            color: #3367b5;
+            background-color: #c9d8f0;
+        }
+
+        .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+            color: #fff;
+            background-color: #467bcb;
+        }
+        .nav-link.has-icon {
+            display: flex;
+            align-items: center;
+        }
+        .nav-link.active {
+            color: #467bcb;
+        }
+        .nav-pills .nav-link {
+            border-radius: .25rem;
+        }
+        .nav-link {
+            color: #4a5568;
+        }
+        .card {
+            box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+        }
+
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 0 solid rgba(0,0,0,.125);
+            border-radius: .25rem;
+        }
+
+        .card-body {
+            flex: 1 1 auto;
+            min-height: 1px;
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="display: inline">Blog Posts</h1>
-    <form action="" method="post" style="display: inline;">
-        {% csrf_token %}
-        
-        {{ search_form.non_field_errors }}
-        
-        {{ search_form.as_p }}
-
-        <input type="hidden" name="form_type" value="search_filter_form">
-        <button type="submit">Filter</button>
-    </form>
-    <p></p>
-    {% if user.is_authenticated %}
-        <button onclick="location.href = '{% url 'profile' %}'">Profile</button>
-        <button onclick="location.href = '{% url 'logout' %}'">Log Out</button>
-    {% else %}
-        <button onclick="location.href = '{% url 'login' %}'">Log In</button>
-        <button onclick="location.href = '{% url 'register' %}'">Register</button>
-    {% endif %}
-    <span>
-        <div> 
-        <form action="" method="post">
-            {% csrf_token %}
-            
-            {{ form.non_field_errors }}
-            
-            {{ form.as_p }}
-            
-            <input type="hidden" name="form_type" value="fetch_filter_form">
-            <button type="submit">Submit</button>
-        </form>
-        </div>
-    </span>
-    <button onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>
-    {% for post in posts %}
-        <h3 onclick="location.href = '{% url 'post_detail' pk=post.id page_number=1 %}'">{{ post.post_ref__title }}</h3>
-    {% endfor %}
-    
-{#
------------------------------------------------------------------------------------------------------------------------
--#}    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
 <div class="container">
     <div class="main-body p-0">
         <div class="inner-wrapper">
@@ -346,5 +432,10 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
