--- a/myblogsite/blog/static/blog/css/home.css
+++ b/myblogsite/blog/static/blog/css/home.css
@@ -3,16 +3,17 @@ body{
     color: #1a202c;
     text-align: left;
     background-color: #e2e8f0;
+    width: 100%;
 }
+
 .inner-wrapper {
     position: relative;
     height: calc(100vh - 3.5rem);
     transition: transform 0.3s;
 }
-@media (min-width: 992px) {
-    .sticky-navbar .inner-wrapper {
-        height: calc(100vh - 3.5rem - 48px);
-    }
+
+.sticky-navbar .inner-wrapper {
+    height: calc(100vh - 3.5rem - 48px);
 }
 
 .inner-main,
@@ -20,6 +21,7 @@ body{
     position: absolute;
     top: 0;
     bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
 }
@@ -52,6 +54,7 @@ body{
     position: relative;
     flex: 1 1 auto;
 }
+
 .inner-main-body .sticky-top,
 .inner-sidebar-body .sticky-top {
     z-index: 999;
@@ -67,22 +70,23 @@ body{
     height: auto;
     min-height: 3.5rem;
 }
-@media (max-width: 767.98px) {
-    .inner-sidebar {
-        left: -235px;
-    }
-    .inner-main {
-        left: 0;
-    }
-    .inner-expand .main-body {
-        overflow: hidden;
-    }
-    .inner-expand .inner-wrapper {
-        transform: translate3d(235px, 0, 0);
-    }
+
+.inner-sidebar {
+    left: -235px;
+}
+.inner-main {
+    left: 0;
+    width: 100%;
+}
+.inner-expand .main-body {
+    /*overflow: hidden;*/
+}
+.inner-expand .inner-wrapper {
+    transform: translate3d(235px, 0, 0);
 }
 
-.nav .show>.nav-link.nav-link-faded, .nav-link.nav-link-faded.active, .nav-link.nav-link-faded:active, .nav-pills .nav-link.nav-link-faded.active, .navbar-nav .show>.nav-link.nav-link-faded {
+.nav .show>.nav-link.nav-link-faded, .nav-link.nav-link-faded.active, .nav-link.nav-link-faded:active,
+.nav-pills .nav-link.nav-link-faded.active, .navbar-nav .show>.nav-link.nav-link-faded {
     color: #3367b5;
     background-color: #c9d8f0;
 }
@@ -118,10 +122,17 @@ body{
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    width: 100%;
 }
 
 .card-body {
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1rem;
+    width: 100%;
+}
+
+.container {
+    margin-top: 2%;
+    width: 100%;
 }
