--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'blog/css/home.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -44,7 +45,7 @@
 {#        </form>#}
 {#        </div>#}
 {#    </span>#}
-{#<button onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>#}
+<button onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>
 {#{% for post in posts %}#}
 {#    <h3 onclick="location.href = '{% url 'post_detail' pk=post.id page_number=1 %}'">{{ post.post_ref__title }}</h3>#}
 {#{% endfor %}#}
@@ -55,15 +56,15 @@
 
             <div class="inner-sidebar">
 
-                <div class="inner-sidebar-header justify-content-center">
-                    <button class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal" data-target="#threadModal">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus mr-2">
-                            <line x1="12" y1="5" x2="12" y2="19"></line>
-                            <line x1="5" y1="12" x2="19" y2="12"></line>
-                        </svg>
-                        NEW DISCUSSION
-                    </button>
-                </div>
+{#                <div class="inner-sidebar-header justify-content-center">#}
+{#                    <button class="btn btn-primary has-icon btn-block" type="button" data-toggle="modal" data-target="#threadModal">#}
+{#                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus mr-2">#}
+{#                            <line x1="12" y1="5" x2="12" y2="19"></line>#}
+{#                            <line x1="5" y1="12" x2="19" y2="12"></line>#}
+{#                        </svg>#}
+{#                        NEW DISCUSSION#}
+{#                    </button>#}
+{#                </div>#}
 
 
                 <div class="inner-sidebar-body p-0">
@@ -115,13 +116,12 @@
 
 
                 <div class="inner-main-body p-2 p-sm-3 collapse forum-content show">
-
                     {% for post in posts %}
 {#                        <h3 onclick="location.href = '{% url 'post_detail' pk=post.id page_number=1 %}'">{{ post.post_ref__title }}</h3>#}
                         <div class="card mb-2">
                             <div class="card-body p-2 p-sm-3">
                                 <div class="media forum-item">
-                                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="{{  }}" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="/media/{{ post.post_ref__user_ref__picture }}" class="mr-3 rounded-circle" width="50" height="50" alt="User" /></a>
                                     <div class="media-body">
                                         <h6><a href="{% url 'post_detail' pk=post.id page_number=1 %}" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ post.post_ref__title }}</a></h6>
                                         <p class="text-secondary">
@@ -332,37 +332,44 @@
             </div>
 
         </div>
-
-        <div class="modal fade" id="threadModal" tabindex="-1" role="dialog" aria-labelledby="threadModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <form>
-                        <div class="modal-header d-flex align-items-center bg-primary text-white">
-                            <h6 class="modal-title mb-0" id="threadModalLabel">New Discussion</h6>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">×</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <label for="threadTitle">Title</label>
-                                <input type="text" class="form-control" id="threadTitle" placeholder="Enter title" autofocus />
-                            </div>
-                            <textarea class="form-control summernote" style="display: none;"></textarea>
-                            <div class="custom-file form-control-sm mt-3" style="max-width: 300px;">
-                                <input type="file" class="custom-file-input" id="customFile" multiple />
-                                <label class="custom-file-label" for="customFile">Attachment</label>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary">Post</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+{##}
+{#        <div class="modal fade" id="threadModal" tabindex="-1" role="dialog" aria-labelledby="threadModalLabel" aria-hidden="true">#}
+{#            <div class="modal-dialog modal-lg" role="document">#}
+{#                <div class="modal-content">#}
+{#                    <form enctype="multipart/form-data">#}
+{#                        <div class="modal-header d-flex align-items-center bg-primary text-white">#}
+{#                            <h6 class="modal-title mb-0" id="threadModalLabel">New Discussion</h6>#}
+{#                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">#}
+{#                                <span aria-hidden="true">×</span>#}
+{#                            </button>#}
+{#                        </div>#}
+{#                        <div class="modal-body">#}
+{#                            <div class="form-group">#}
+{#                                <label for="threadTitle">Title</label>#}
+{#                                <input type="text" class="form-control" id="threadTitle" placeholder="Enter title" autofocus />#}
+{#                            </div>#}
+{#                            <textarea class="form-control summernote" style="display: none;"></textarea>#}
+{#                            <div class="custom-file form-control-sm mt-3" style="max-width: 300px;">#}
+{#                                <input type="file" class="custom-file-input" id="customFile" multiple />#}
+{#                                <label class="custom-file-label" for="customFile">Attachment</label>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        {% csrf_token %}#}
+{#                        {{ new_post_form.as_p }}#}
+{#                        <div class="modal-footer">#}
+{#                            <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>#}
+{#                            <button type="button" class="btn btn-primary">Post</button>#}
+{#                        </div>#}
+{#                    </form>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
     </div>
 </div>
+<script>
+    {#var get_user_img_url = '{% url 'get_user_image' %}'#}
+    var csrf_token = '{% csrf_token %}'
+</script>
+<script src="{% static 'blog/js/home.js' %}"></script>
 </body>
 </html>
