--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -8,7 +8,7 @@
     {% load static %}
 </head>
 <body>
-
+    {% include 'header.html' %}
     <h1 style="display: inline" onclick="location.href = '{% url 'home' pk=0 page_number=1 %}'">Home</h1>
     <h2 style="display: inline;"> | {{ post.title }}</h2>
     <h4 style="display: inline;">{{ post.user_ref.username }}</h4>
@@ -20,6 +20,39 @@
     {% endif %}
     <h5 id="post_upvote">Upvote: {{ post_upvotes }}</h5>
     <h5 id="post_downvote">Downvote: {{ post_downvotes }}</h5>
+
+    <div class = "delete-post">
+        {% if user.pk == post.user_ref.pk %}
+            <form method="POST" action="{% url 'delete_post' user_post_pk %}">
+                {% csrf_token %}
+                <button type="submit">Delete post</button>
+            </form>
+        {% endif %}
+
+    </div>
+
+    <div class = "update-post">
+        {% if user.pk == post.user_ref.pk %}
+            <h3>You are the author of this post!</h3>
+
+            <!-- update title -->
+            <form method="POST" action="{% url 'update_post_title' user_post_pk %}">
+                {% csrf_token %}
+                <label for="new_title">New Title:</label>
+                <input type="text" id="new_title" name="new_title" value="{{ post.title }}">
+                <button type="submit">Update Title</button>
+            </form>
+
+            <!-- update content -->
+            <form method="POST" action="{% url 'update_post_content' user_post_pk %}">
+                {% csrf_token %}
+                <label for="new_content">New Content:</label>
+                <textarea id="new_content" name="new_content">{{ post.content }}</textarea>
+                <button type="submit">Update Content</button>
+            </form>
+        {% endif %}
+    </div>
+
 
     <h2>Comments: </h2>
     <div id="comment-section">
@@ -48,6 +81,7 @@
             {{ form.as_p }}
             <button type="submit">Submit</button>
         </form>
+
     {% endif %}
 
 </body>
