--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -5,6 +5,7 @@
     <title>Profile</title>
 </head>
 <body>
+    {% include 'header.html' %}
 <h1 style="display: inline" onclick="location.href = '{% url 'home' pk=0 page_number=1 %}'">Home</h1>
 <h2>Profile</h2>
 <img src="{{ picture }}" style="max-width: 700px; max-height: 700px;">
